force-app/main/default/objects/Contact/fields/ContractType__c.field-meta.xml
<CustomField>
    <fullName>ContractType__c</fullName>
    <formula>IF(INCLUDES( Account.ContractType__c , &quot;Indoor&quot;), &quot;Indoor; &quot;, &quot;&quot;) &amp;
IF(INCLUDES(Account.ContractType__c , &quot;Outdoor&quot;), &quot;Outdoor; &quot;, &quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contract Type</label>
    <type>Text</type>
</CustomField>