force-app/main/default/objects/Contact/fields/Decision_maker__c.field-meta.xml
<CustomField>
    <fullName>Decision_maker__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Decision Maker</label>
    <type>Checkbox</type>
</CustomField>