force-app/main/default/objects/Contact/fields/Function_Type__c.field-meta.xml
<CustomField>
    <fullName>Function_Type__c</fullName>
    <label>Function Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>C-Level</fullName>
            </value>
            <value>
                <fullName>Management</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>