force-app/main/default/objects/Contact/fields/Functional_level__c.field-meta.xml
<CustomField>
    <fullName>Functional_level__c</fullName>
    <label>Functional Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Executive</fullName>
            </value>
            <value>
                <fullName>Limited Decision Mandate</fullName>
            </value>
            <value>
                <fullName>Extended Decision Mandate</fullName>
            </value>
            <value>
                <fullName>TBD</fullName>
                <isActive>false</isActive>
                <label>TBD</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>