force-app/main/default/objects/Contact/fields/Has_Left_Company__c.field-meta.xml
<CustomField>
    <fullName>Has_Left_Company__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has Left Company</label>
    <type>Checkbox</type>
</CustomField>