force-app/main/default/objects/Contact/fields/Language_Formula__c.field-meta.xml
<CustomField>
    <fullName>Language_Formula__c</fullName>
    <formula>CASE(TEXT( Language__c ), 
&quot;Dutch&quot;, &quot;nl&quot;, 
&quot;French&quot;, &quot;fr&quot;,
&quot;en&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Language Formula</label>
    <type>Text</type>
</CustomField>