force-app/main/default/objects/Contact/fields/Type_Formula__c.field-meta.xml
<CustomField>
    <fullName>Type_Formula__c</fullName>
    <formula>IF ( INCLUDES (  Type__c , &quot;Financial&quot; ), &quot;Financial&quot;, null ) &amp;
IF ( INCLUDES ( Type__c , &quot;Commercial&quot; ), &quot;Commercial&quot;,null ) &amp;
IF ( INCLUDES ( Type__c , &quot;Operational&quot; ), &quot;Operational&quot;,null ) &amp;
IF ( INCLUDES ( Type__c , &quot;Group&quot; ), &quot;Group&quot;,null )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Type Formula</label>
    <type>Text</type>
</CustomField>